# jack

./: README.md
examples/gol/: CMakeLists.txt  gameoflife.h  gol.mod.jack.json  gol.prj.jack.json  gridworld.h  main.cpp  package.xml
examples/gol/impl/: golsampleentrypoint.cpp
examples/gol/impl/agents/: gameoflifeagentimpl.cpp  gameoflifeagentimpl.h
examples/gol/impl/goals/: modellifeimpl.cpp  modellifeimpl.h
examples/gol/impl/plans/: dieplanimpl.cpp  dieplanimpl.h  liveplanimpl.cpp  liveplanimpl.h
examples/gol/impl/services/: gameoflifeserviceimpl.cpp  gameoflifeserviceimpl.h
examples/gol/meta/: gol.cmake  golenumsmeta.cpp  golenumsmeta.h  golevents.h  golproject.cpp  golproject.h  golservicecomponents.h
examples/gol/meta/agents/: gameoflifeagentmeta.cpp  gameoflifeagentmeta.h
examples/gol/meta/goals/: modellifemeta.cpp  modellifemeta.h
examples/gol/meta/messages/: cellcommandmeta.cpp  cellcommandmeta.h  cellinfometa.cpp  cellinfometa.h
examples/gol/meta/plans/: dieplanmeta.cpp  dieplanmeta.h  liveplanmeta.cpp  liveplanmeta.h
jack_core/: .gitignore  CHANGELOG.txt  CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md  baseline.cmake  deps.cmake  gitlab_ci_build.sh  overrides.cmake  package.xml  projectVersionDetails.cmake
jack_core/doxygen/: Doxyfile  Doxyfile-header.tex  Doxyfile.in
jack_core/package/: CMakeLists.txt  generate-header-list.bat  generate-header-list.cpp  generate-header-list.sh
jack_core/projectVersion/: projectVersion.cpp.in  projectVersion.h
jack_core/src/: CMakeLists.txt  dds-adapter-cyclone.cmake  dds-adapter-rti.cmake  json-adapter.cmake  websocket-adapter.cmake
jack_core/src/jack/: agent.cpp  agent.h  agentexecutor.cpp  agentexecutor.h  beliefcontext.cpp  beliefcontext.h  beliefquery.cpp  beliefquery.h  bqltokens.h  corelib.cpp  corelib.h  coroutine.cpp  coroutine.h  dag.cpp  dag.h  engine.cpp  engine.h  fieldregistry.cpp  fieldregistry.h  future.h  goal.cpp  goal.h  handles.h  jack  jack.h  lex.yy.c  message.cpp  message.h  messageschema.cpp  messageschema.h  plan.cpp  plan.h  promise.h  proxyagent.cpp  proxyagent.h  resource.cpp  resource.h  role.cpp  role.h  schedule.cpp  (+10 more)
jack_core/src/tests/: CMakeLists.txt  agents.cpp  allocator.cpp  beliefs.cpp  bitmaskops.cpp  bitmaskops.h  data.cpp  goals.cpp  gt_main.cpp  hanoi.cpp  intentions.cpp  main.cpp  messages.cpp  node.cpp  resources.cpp  service.cpp  tactics.cpp  team.cpp  testhelpers.h  tests.mod.jack.json
jack_core/toolchains/: toolchain-aarch64.cmake  zig-cross-compile-toolchain.cmake
jack_make/: CHANGELOG.txt  CMakeLists.txt  Cargo.toml  Cargo.toml.in  README.md  make_report.sh  package.xml  projectVersionDetails.cmake  test_report.py  validation_rules.md
jack_make/cmake/: jack_make_config_extras.cmake
jack_make/projectVersion/: projectVersion.h  projectVersionLib.cmake
jack_make/src/: lib.rs  migration.rs  model_v0_4_11.rs  model_v0_5_0.rs  model_v0_5_1.rs  model_v0_5_2.rs  model_v0_5_3.rs  model_v0_6_0.rs  templates.rs
jack_make/templates/: agentimpl.cpp.j2  agentimpl.h.j2  agentmeta.cpp.j2  agentmeta.h.j2  beliefmeta.cpp.j2  beliefmeta.h.j2  enumsmeta.cpp.j2  enumsmeta.h.j2  events.h.j2  goalimpl.cpp.j2  goalimpl.h.j2  goalmeta.cpp.j2  goalmeta.h.j2  module.cpp.j2  module.h.j2  planimpl.cpp.j2  planimpl.h.j2  planmeta.cpp.j2  planmeta.h.j2  project.cmake.j2  project.cpp.j2  project.h.j2  resourcemeta.h.j2  ros2idl.msg.j2  sampleentrypoint.cpp.j2  servicecomponents.h.j2  serviceimpl.cpp.j2  serviceimpl.h.j2  servicemeta.cpp.j2  servicemeta.h.j2  templates.json.j2
jack_make/tests/: lib.rs
(+533 files in other folders)
