[package]
name = "jack-make"
version = "0.6.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde        = { version = "1.0", features = [ "derive" ] }
serde_json   = { version = "1.0", features = [ "preserve_order" ] }
argparse     = "0.2.2"
askama       = "0.8"
chrono       = "0.4"
wasm-bindgen = "0.2"
cargo-ament-build = "0.1.7"

# \note https://docs.rs/getrandom/latest/getrandom/#webassembly-support
# the wasm32-unknown-unknown target (i.e. the target used by
# wasm-pack) is not automatically supported since, from the target name alone,
# we cannot deduce which JavaScript interface is in use (or if JavaScript is
# available at all).
#
# Instead, if the js Cargo feature is enabled, this crate will assume that you
# are building for an environment containing JavaScript, and will call the
# appropriate methods. Both web browser (main window and Web Workers) and
# Node.js environments are supported, invoking the methods described above using
# the wasm-bindgen toolchain.
getrandom    = { version = "0.2",   features = ["js"] }
uuid         = { version = "1.6.1", features = ["v4",                 # Lets you generate random UUIDs
                                                "fast-rng",           # Use a faster (but still sufficiently random) RNG
                                                "macro-diagnostics"]} # Enable better diagnostics for compile-time UUIDs

[package.metadata.deb]
maintainer = "Jack Support <code@jackagents.com>"
copyright = "© LUCAS FIELD AUTONOMOUS AGRICULTURE PTY LTD, ACN 607 923 133, 2025 <info@jackagents.com>"
extended-description = "JACK Model Code Generation and Validation tool."
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/jack-make", "usr/bin/", "755"],
    ["target/release/jack-validator", "usr/bin/", "755"],
]

[package.metadata.ros]
#install_to_share = ["launch", "config"]
